<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fcfcfc"
    android:orientation="vertical" >
        
        <RelativeLayout 
  			android:layout_width="fill_parent"
  			android:layout_height="45dp"
  			android:id="@+id/title" 
  			android:background="@drawable/title_bar"
  			android:gravity="center_vertical"  >  
  			
            
      		<TextView
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content" 
        		android:text="@string/mymessage"
        		android:layout_centerInParent="true"
        		android:textSize="20sp"		
				android:textColor="#ffffff" />      
		</RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/search_bar_bg" >

            <EditText
                android:id="@+id/editText1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/seachtext"
                android:singleLine="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textColor="#000"
                android:drawableLeft="@drawable/search_bar_icon_normal" 
                android:background="@drawable/search_bar_edit_bg" >               
            </EditText>
            
        </LinearLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:background="@drawable/mm_listitem"
            android:clickable="true"
            android:onClick="startchat"
             >
            
            <ImageView
                android:id="@+id/head"
                android:layout_width="55dp"
		        android:layout_height="55dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="5dp"
                android:src="@drawable/gimp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/head"
                android:padding="7dp"
                android:text="GIMP"
                android:textColor="#000" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="7dp"
                android:text="2013-7-6"
                android:textColor="#666" />
             <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/head"
                android:layout_alignParentBottom="true"
                android:padding="7dp"
                android:text="@string/hello"
                android:textColor="#666" />

            
            
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/mm_listitem"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="startchat">

            <ImageView
                android:id="@+id/ImageView01"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="5dp"
                android:src="@drawable/foobar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/ImageView01"
                android:padding="7dp"
                android:text="FOOBAR"
                android:textColor="#000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="7dp"
                android:text="2013-7-6"
                android:textColor="#666" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/ImageView01"
                android:padding="7dp"
                android:text="@string/hello"
                android:textColor="#666" />
        </RelativeLayout>

 </LinearLayout>
